--- a/services/instant-fence-quote.html
+++ b/services/instant-fence-quote.html
@@ -4,8 +4,15 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Instant Garden Fence Quote | Home Maintenance Doncaster</title>
-<meta name="description" content="Get an instant garden fence quote with fully transparent pricing. Enter your fence length and gates to receive a detailed cost breakdown online.">
+<meta name="description" content="Get an instant garden fence quote with fully transparent pricing. Enter your fence length and number of gates to receive a detailed cost breakdown online.">
 <link rel="canonical" href="https://steely1968.github.io/instant-fence-quote.html">
+
+<!-- Open Graph Meta Tags for Facebook/LinkedIn -->
+<meta property="og:title" content="Instant Garden Fence Quote – Home Maintenance Doncaster">
+<meta property="og:description" content="Get a transparent instant online quote for your garden fence. Includes materials, labour, and gate installation costs.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://steely1968.github.io/instant-fence-quote.html">
+<meta property="og:image" content="https://steely1968.github.io/images/fence-preview.jpg">
 
 <!-- jsPDF and AutoTable -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js" defer></script>
@@ -37,6 +44,9 @@ button:hover,button:focus{background:#333;outline:3px solid #27ae60;}
 .site-footer{background:#000;color:#fff;text-align:center;padding:25px 15px;margin-top:40px;font-size:14px;}
 .footer-services{background-color:black;padding:20px;text-align:center;margin-top:15px;}
 .footer-services a{color:white;margin:0 10px;}
+.skip-link{position:absolute;top:-40px;left:0;background:#27ae60;color:white;padding:8px;z-index:100;transition:top 0.3s;}
+.skip-link:focus{top:0;}
+.visually-hidden{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);border:0;}
 </style>
 </head>
 <body>
