--- a/services/guttering.html
+++ b/services/guttering.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Gutter Replacement, Cleaning & Clearing | Askern DN6 | Home Repairs 4U</title>
 
-<link rel="canonical" href="https://steely1968.github.io/">
+<link rel="canonical" href="https://steely1968.github.io/services/guttering.html">
 <meta name="description" content="Home Repairs 4U provides gutter replacement, gutter cleaning and gutter clearing across Askern DN6 and all locations within 10 miles. Fast, affordable, fully insured. Call 07735 873694.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
