--- a/services/pressure-washing.html
+++ b/services/pressure-washing.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" user-scalable=no/>
 <title>Professional Pressure Washing in Askern DN6 | Driveways, Patios & Exterior Cleaning</title>
 
-<link rel="canonical" href="https://steely1968.github.io/">
+<link rel="canonical" href="https://steely1968.github.io/services/pressure-washing.html">
 <meta name="description" content="Professional pressure washing and exterior cleaning in Askern DN6 and all nearby areas within 10 miles. Driveways, patios, decking, walls, paths and more. Fast, insured and affordable. Call 07735 873694.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
