--- a/services/exterior-decorating.html
+++ b/services/exterior-decorating.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Exterior Decorating in Askern DN6 | House, Fence & Iron Rail Painting</title>
 
-<link rel="canonical" href="https://steely1968.github.io/services/exterior-decorating.html">
+<link rel="canonical" href="https://homerepairs4u.com/services/exterior-decorating.html">
 <meta name="description" content="Professional exterior decorating services in Askern DN6 and nearby areas. Specialising in house painting, fence painting, and iron rail painting. Insured, reliable, and high-quality finishes. Call 07735 873694.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
