--- a/services/fence-installation.html
+++ b/services/fence-installation.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" user-scalable=no/>
 <title>Fence Installation & Gate Fitting in Askern DN6 | Repairs, Sheds & Timber Storage</title>
 
-<link rel="canonical" href="https://steely1968.github.io/services/fence-installation.html">
+<link rel="canonical" href="https://homerepairs4u.com/services/fence-installation.html">
 <meta name="description" content="Professional fence installation and gate fitting in Askern DN6. Full fence builds, repairs, wooden shed construction, bin stores and log storage. Call 07735 873694.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
