--- a/services/garden.html
+++ b/services/garden.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Garden Services in Askern DN6 | Landscaping, Maintenance & Small Jobs</title>
 
-<link rel="canonical" href="https://steely1968.github.io/services/garden.html">
+<link rel="canonical" href="https://homerepairs4u.com/services/garden.html">
 <meta name="description" content="Professional garden services in Askern DN6. From small garden jobs to landscaping, hedge cutting, lawn care, planting, patio installation and raised beds. Call 07735 873694.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
