--- a/services/instant-fence-quote.html
+++ b/services/instant-fence-quote.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Instant Garden Fence Quote | Home Maintenance Doncaster</title>
 <meta name="description" content="Get an instant garden fence quote with fully transparent pricing. Enter your fence length and number of gates to receive a detailed cost breakdown online.">
-<link rel="canonical" href="https://steely1968.github.io/services/instant-fence-quote.html">
+<link rel="canonical" href="https://homerepairs4u.com/services/instant-fence-quote.html">
 
 <!-- Open Graph Meta Tags for Facebook/LinkedIn -->
 <meta property="og:title" content="Instant Garden Fence Quote – Home Maintenance Doncaster">
