--- a/services/upvc-restoration.html
+++ b/services/upvc-restoration.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>uPVC Restoration & Cleaning in Askern DN6 | Windows, Doors, Gutters & Conservatories</title>
 
-<link rel="canonical" href="https://steely1968.github.io/services/upvc-restoration">
+<link rel="canonical" href="https://homerepairs4u.com/services/upvc-restoration.html">
 <meta name="description" content="Professional uPVC restoration in Askern DN6. Gutter and fascia cleaning, downpipe maintenance, uPVC window and door cleaning, conservatory roof cleaning, full internal and external valets. Call 07735 873694.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
