--- a/services/fence-installation.html
+++ b/services/fence-installation.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-
 <title>Home Repairs 4U – Exterior Decorating, Fencing, Garden, Gutters, Pressure Washing & uPVC Services in Askern DN6</title>
 
 <link rel="canonical" href="https://homerepairs4u.com/">
@@ -12,9 +11,7 @@
 <link rel="preload" as="image" href="/images/logo.webp" />
 
 <style>
-/* =======================
-BASE STYLES
-======================= */
+/* ========== Base styles ========== */
 body{
 margin:0;
 padding:0;
@@ -23,19 +20,16 @@ background:#f9f9f9;
 color:#222;
 line-height:1.65;
 }
-
 header{
 text-align:center;
 padding:25px 10px;
 background:#fff;
 border-bottom:4px solid #27ae60;
 }
-
 .logo{
 max-height:90px;
 width:auto;
 }
-
 .call-btn{
 display:inline-block;
 margin-top:18px;
@@ -48,22 +42,14 @@ font-weight:bold;
 border-radius:6px;
 border:2px solid #000;
 }
-
-.call-btn:hover{
-background:#333;
-}
-
+.call-btn:hover{ background:#333; }
 main{
 max-width:900px;
 margin:0 auto;
 background:#fff;
 padding:25px 15px;
 }
-
-h1,h2,h3{
-color:#111;
-}
-
+h1,h2,h3{ color:#111; }
 .service-btn{
 display:inline-block;
 margin-top:15px;
@@ -76,11 +62,7 @@ font-weight:bold;
 border-radius:6px;
 border:2px solid #000;
 }
-
-.service-btn:hover{
-background:#333;
-}
-
+.service-btn:hover{ background:#333; }
 footer{
 background:#000;
 color:#fff;
@@ -90,9 +72,7 @@ margin-top:40px;
 font-size:14px;
 }
 
-/* =======================
-LIGHTBOX STYLES
-======================= */
+/* ========== Lightbox styles ========== */
 .lightbox {
 display: none;
 position: fixed;
@@ -105,23 +85,16 @@ background: rgba(0,0,0,0.85);
 align-items: center;
 justify-content: center;
 }
-
 .lightbox img {
 max-width: 95%;
 max-height: 95%;
 border-radius: 6px;
 box-shadow: 0 0 20px #000;
 }
-
-.lightbox:target {
-display: flex;
-}
-
+.lightbox:target { display: flex; }
 </style>
 
-<!-- =======================
-SCHEMA – BUSINESS INFO
-======================= -->
+<!-- Business Schema -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
@@ -160,67 +133,29 @@ SCHEMA – BUSINESS INFO
 }
 </script>
 
-<!-- =======================
-SCHEMA – FAQ
-======================= -->
+<!-- FAQ Schema -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
 "@type":"FAQPage",
 "mainEntity":[
-{
-"@type":"Question",
-"name":"Which areas do you cover?",
-"acceptedAnswer":{
-"@type":"Answer",
-"text":"We serve Askern DN6 and a 10-mile radius including Campsall, Norton, Skellow, Carcroft, Adwick, Bentley, and surrounding villages."
-}
-},
-{
-"@type":"Question",
-"name":"Are your services insured?",
-"acceptedAnswer":{
-"@type":"Answer",
-"text":"Yes, all our services are fully insured to ensure peace of mind and reliable workmanship."
-}
-},
-{
-"@type":"Question",
-"name":"Can I book multiple services at the same time?",
-"acceptedAnswer":{
-"@type":"Answer",
-"text":"Yes, we can schedule multiple services together for convenience and efficiency."
-}
-},
-{
-"@type":"Question",
-"name":"Do you offer free consultations?",
-"acceptedAnswer":{
-"@type":"Answer",
-"text":"Yes, we provide free consultations to assess your requirements and give accurate quotes."
-}
-}
+{"@type":"Question","name":"Which areas do you cover?","acceptedAnswer":{"@type":"Answer","text":"We serve Askern DN6 and a 10-mile radius including Campsall, Norton, Skellow, Carcroft, Adwick, Bentley, and surrounding villages."}},
+{"@type":"Question","name":"Are your services insured?","acceptedAnswer":{"@type":"Answer","text":"Yes, all our services are fully insured to ensure peace of mind and reliable workmanship."}},
+{"@type":"Question","name":"Can I book multiple services at the same time?","acceptedAnswer":{"@type":"Answer","text":"Yes, we can schedule multiple services together for convenience and efficiency."}},
+{"@type":"Question","name":"Do you offer free consultations?","acceptedAnswer":{"@type":"Answer","text":"Yes, we provide free consultations to assess your requirements and give accurate quotes."}}
 ]
 }
 </script>
 
 </head>
-
 <body>
 
 <header>
-<img src="/images/logo.webp"
-alt="Home Repairs 4U logo"
-class="logo"
-width="600" height="200"
-loading="eager">
-
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200" loading="eager">
 <div style="text-align:center; margin-top:10px;">
 <a href="/" style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
 </div>
-
 <br>
-
 <a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </header>
 
@@ -229,18 +164,16 @@ loading="eager">
 <h1>Welcome to Home Repairs 4U – Professional Home Services in Askern DN6</h1>
 
 <p>
-At <strong>Home Repairs 4U</strong>, we provide expert home and garden services to homeowners across Askern DN6 and surrounding areas. From exterior decorating and fencing to guttering, pressure washing, and uPVC restoration, we bring over 30 years of experience to every project. Our work is fully insured, reliable, and focused on enhancing your home’s appearance, function, and long-term value.
+At <strong>Home Repairs 4U</strong> we provide expert home and garden services across Askern DN6 and surrounding areas. From exterior decorating and fencing to guttering, pressure washing and uPVC restoration — our experienced, insured team delivers high-quality workmanship and lasting results.
 </p>
 
-<!-- =======================
-EXTERIOR DECORATING
-======================= -->
+<!-- Exterior Decorating -->
 <h2>Exterior Decorating</h2>
 <p>
-Our <strong>exterior decorating service</strong> transforms homes, fences, outbuildings, sheds, and railings using premium, weather-resistant paints and coatings. We prepare all surfaces thoroughly — cleaning, sanding, scraping, and priming — to guarantee long-lasting, professional results. Whether you prefer a modern refresh or a classic finish, we help you choose colours and materials that enhance your home's appearance and curb appeal.
+Our <strong>exterior decorating</strong> service refreshes brickwork, cladding, fences and railings using weather-resistant paints and careful surface preparation (clean, sand, prime). We help with colour selection and finishes to ensure a durable, attractive result that enhances kerb appeal.
 </p>
 
-<!-- Decorating Lightbox Image -->
+<!-- Decorating Lightbox -->
 <a href="#decorating-lightbox">
 <img src="/images/house-before-after.webp"
 alt="Exterior decorating before and after example"
@@ -256,16 +189,13 @@ loading="lazy">
 
 <a href="/services/exterior-decorating.html" class="service-btn">View Exterior Decorating</a>
 
-<!-- =======================
-FENCE INSTALLATION
-======================= -->
+<!-- Fence Installation -->
 <h2>Fence Installation</h2>
 <p>
-We supply and install all types of timber fencing, including feather edge, closeboard, lap panels, decorative panels, and bespoke timber solutions. Every installation is completed with precision — posts are set securely, panels are levelled properly, and all fixings are high quality for long-term strength.
-We also repair storm-damaged fences, replace broken posts, and fit made-to-measure gates to improve security and privacy around your property.
+We install and repair all types of timber fencing — closeboard, feather edge, lap panels, decorative panels and bespoke solutions. Posts are set securely and panels fitted to provide strength, privacy and a neat finish. We also repair storm damage and fit gates to measure.
 </p>
 
-<!-- Fence Lightbox Image -->
+<!-- Fence Lightbox (corrected path) -->
 <a href="#fence-lightbox">
 <img src="/images/fence-before-after.webp"
 alt="Fence installation before and after example"
@@ -281,65 +211,49 @@ loading="lazy">
 
 <a href="/services/fence-installation.html" class="service-btn">View Fence Installation</a>
 
-<!-- =======================
-GARDEN MAINTENANCE
-======================= -->
+<!-- Garden Maintenance -->
 <h2>Garden Maintenance</h2>
 <p>
-We offer one-off jobs and full garden maintenance, including lawn care, hedge trimming, weeding, planting, and seasonal tidy-ups. For more extensive projects, we provide landscaping services such as turfing, gravel features, raised beds, patios, and planting schemes.
-Our goal is to create clean, attractive, and easy-to-maintain outdoor spaces that you can enjoy all year round.
+From one-off tidy-ups to regular maintenance and landscaping, we offer lawn care, hedge trimming, weeding, planting, turfing, patios and raised beds. We create practical, low-maintenance gardens that look great year-round.
 </p>
-
 <a href="/services/garden.html" class="service-btn">View Garden Services</a>
 
-<!-- =======================
-GUTTERING
-======================= -->
+<!-- Guttering -->
 <h2>Gutter Replacement</h2>
 <p>
-Our guttering service includes full replacements, fascia and soffit work, leak repairs, downpipe maintenance, and cleaning. Properly functioning gutters prevent water damage, staining, and structural issues around your property.
-We install durable, weather-resistant systems designed for long life and low maintenance.
+Proper guttering protects your property from water damage. We replace gutters, repair leaks, maintain downpipes and restore fascias and soffits using durable, weather-resistant products.
 </p>
-
 <a href="/services/guttering.html" class="service-btn">View Gutter Services</a>
 
-<!-- =======================
-PRESSURE WASHING
-======================= -->
+<!-- Pressure Washing -->
 <h2>Pressure Washing</h2>
 <p>
-Our pressure washing restores driveways, patios, paths, decking, walls, and brickwork. We remove years of dirt, algae, moss, and staining to bring surfaces back to life. It improves appearance, increases safety, and boosts your home’s kerb appeal.
+Our pressure washing refreshes driveways, patios, decking, paths and brickwork by removing algae, moss and staining — improving safety and kerb appeal.
 </p>
-
 <a href="/services/pressure-washing.html" class="service-btn">View Pressure Washing</a>
 
-<!-- =======================
-UPVC RESTORATION
-======================= -->
+<!-- uPVC Restoration -->
 <h2>uPVC Restoration</h2>
 <p>
-We restore uPVC windows, doors, conservatories, trims, and fascias using specialist cleaning products that safely remove discolouration, algae, dirt, and surface wear.
-Your uPVC will look bright, clean, and refreshed — dramatically improving the appearance of your home.
+We restore uPVC windows, doors and conservatories using professional products and techniques to remove discolouration and grime without harming seals or frames.
 </p>
-
 <a href="/services/upvc-restoration.html" class="service-btn">View uPVC Restoration</a>
 
 </main>
 
 <footer>
-
 <p>© Home Repairs 4U – Askern DN6</p>
 <p>Exterior Decorating • Fence Installation • Garden Maintenance • Gutter Replacement • Pressure Washing • uPVC Restoration</p>
 <p>📞 Call 07735 873694</p>
 
-<p style="margin-top:20px;">Our Services:</p>
-<a href="/services/exterior-decorating.html" style="color:white; margin:0 10px;">Exterior Decorating</a>
-<a href="/services/fence-installation.html" style="color:white; margin:0 10px;">Fence Installation</a>
-<a href="/services/garden.html" style="color:white; margin:0 10px;">Garden</a>
-<a href="/services/guttering.html" style="color:white; margin:0 10px;">Guttering</a>
-<a href="/services/pressure-washing.html" style="color:white; margin:0 10px;">Pressure Washing</a>
-<a href="/services/upvc-restoration.html" style="color:white; margin:0 10px;">uPVC Restoration</a>
-
+<p style="margin-top:16px;">
+<a href="/services/exterior-decorating.html" style="color:white; margin:0 8px;">Exterior Decorating</a>
+<a href="/services/fence-installation.html" style="color:white; margin:0 8px;">Fence Installation</a>
+<a href="/services/garden.html" style="color:white; margin:0 8px;">Garden</a>
+<a href="/services/guttering.html" style="color:white; margin:0 8px;">Guttering</a>
+<a href="/services/pressure-washing.html" style="color:white; margin:0 8px;">Pressure Washing</a>
+<a href="/services/upvc-restoration.html" style="color:white; margin:0 8px;">uPVC Restoration</a>
+</p>
 </footer>
 
 </body>
